--- a/Testprograms/SineRecorder/platformio.ini
+++ b/Testprograms/SineRecorder/platformio.ini
@@ -17,4 +17,4 @@ board_build.mcu = imxrt1062
 board_build.f_cpu = 600000000L
 
 build_flags = -D TEENSY_OPT_FASTER
-              -D USB_SERIAL
+              -D USB_MIDI_AUDIO_SERIAL
