--- a/AcquisitionSystem/platformio.ini
+++ b/AcquisitionSystem/platformio.ini
@@ -17,10 +17,15 @@ board = teensy41
 board_build.mcu = imxrt1062
 board_build.f_cpu = 816000000L
 
-build_flags = -D TEENSY_OPT_FASTEST_LTO
+build_unflags = -Wno-volatile
+build_flags = ${env.build_unflags}
               -Wl,--print-memory-usage
               -g
-              -Wformat=1
+              ; -Wformat=1
+              -Wno-unused-parameter
+              -Wno-sign-compare
+              -Wno-volatile
+              -D TEENSY_OPT_FASTEST_LTO
               -D USB_SERIAL
               -D LV_CONF_PATH=../../../src/Gui/lv_conf.h
               -D LV_LVGL_H_INCLUDE_SIMPLE
