--- a/AcquisitionSystem/platformio.ini
+++ b/AcquisitionSystem/platformio.ini
@@ -17,15 +17,15 @@ board = teensy41
 board_build.mcu = imxrt1062
 board_build.f_cpu = 816000000L
 
-build_unflags = -Wno-volatile
-build_flags = ${env.build_unflags}
-              -Wl,--print-memory-usage
-              -g
-              ; -Wformat=1
-              -Wno-unused-parameter
-              -Wno-sign-compare
-              -Wno-volatile
-              -D TEENSY_OPT_FASTEST_LTO
+; build_unflags = -Wno-volatile
+build_flags = ;${env.build_unflags}
+              ; -Wl,--print-memory-usage
+              ;-g
+              -Wformat=1
+              ; -Wno-unused-parameter
+              ; -Wno-type-limits
+              ; -Wno-sign-compare
+              -D TEENSY_OPT_FASTER
               -D USB_SERIAL
               -D LV_CONF_PATH=../../../src/Gui/lv_conf.h
               -D LV_LVGL_H_INCLUDE_SIMPLE
@@ -33,13 +33,13 @@ build_flags = ${env.build_unflags}
               -I src/Gui/custom
 
 lib_deps =
+  https://github.com/tsandmann/freertos-teensy.git
   Adafruit GFX Library
   Adafruit BusIO
   LVGL
   CST816S
   FastLED
   PCF8523
-  https://github.com/tsandmann/freertos-teensy.git
 
 extra_scripts = pre:tools/prebuild.py
                 post:tools/postbuild.py
