--- a/AcquisitionSystem/platformio.ini
+++ b/AcquisitionSystem/platformio.ini
@@ -17,6 +17,8 @@ board = teensy41
 board_build.mcu = imxrt1062
 board_build.f_cpu = 816000000L
 
+monitor_raw = yes
+
 ; build_unflags = -Wno-volatile
 build_flags = ;${env.build_unflags}
               ; -Wl,--print-memory-usage
