--- a/AcquisitionSystem/platformio.ini
+++ b/AcquisitionSystem/platformio.ini
@@ -20,8 +20,8 @@ board_build.f_cpu = 816000000L
 monitor_raw = yes
 
 ; build_unflags = -Wno-volatile
-build_flags = ;${env.build_unflags}
-              ; -Wl,--print-memory-usage
+build_flags = ${env.build_unflags}
+              -Wl,--print-memory-usage
               ;-g
               -Wformat=1
               ; -Wno-unused-parameter
