--- a/AcquisitionSystem/platformio.ini
+++ b/AcquisitionSystem/platformio.ini
@@ -10,24 +10,21 @@
 
 
 [env:teensy41]
-; platform = teensy
-platform = https://github.com/tsandmann/platform-teensy.git
+platform = teensy
 framework = arduino
 board = teensy41
 board_build.mcu = imxrt1062
 board_build.f_cpu = 816000000L
-
 monitor_raw = yes
 
-; build_unflags = -Wno-volatile
 build_flags = ${env.build_unflags}
               -Wl,--print-memory-usage
-              ;-g
               -Wformat=1
+              -Wno-sign-compare
               ; -Wno-unused-parameter
               ; -Wno-type-limits
               ; -Wno-sign-compare
-              -fasynchronous-unwind-tables
+              ;-fasynchronous-unwind-tables
               -D AUDIO_BLOCK_SAMPLES=128
               -D TEENSY_OPT_FASTER
               -D USB_MTPDISK_SERIAL
@@ -37,7 +34,6 @@ build_flags = ${env.build_unflags}
               -I src/Gui/custom
 
 lib_deps =
-  https://github.com/tsandmann/freertos-teensy.git
   Adafruit GFX Library
   Adafruit BusIO
   LVGL
@@ -46,6 +42,7 @@ lib_deps =
   PCF8523
   SdFat
   MTP_Teensy
+  TeensyThreads
   
 
 extra_scripts = pre:tools/prebuild.py
