Fixed RTC issues by using new library (RTClib)

--- a/AcquisitionSystem/platformio.ini
+++ b/AcquisitionSystem/platformio.ini
@@ -21,10 +21,6 @@ build_flags = ${env.build_unflags}
               -Wl,--print-memory-usage
               -Wformat=1
               -Wno-sign-compare
-              ; -Wno-unused-parameter
-              ; -Wno-type-limits
-              ; -Wno-sign-compare
-              ;-fasynchronous-unwind-tables
               -D AUDIO_BLOCK_SAMPLES=128
               -D TEENSY_OPT_FASTER
               -D USB_MTPDISK_SERIAL
@@ -39,7 +35,7 @@ lib_deps =
   LVGL
   CST816S
   Adafruit NeoPixel
-  PCF8523
+  RTClib
   SdFat
   MTP_Teensy
   TeensyThreads
