Updated QNEthernet Library

--- a/Testprograms/EthernetTcpAsync/lib/QNEthernet/library.properties
+++ b/Testprograms/EthernetTcpAsync/lib/QNEthernet/library.properties
@@ -1,6 +1,6 @@
 # https://arduino.github.io/arduino-cli/latest/library-specification/
 name=QNEthernet
-version=0.25.0
+version=0.26.0-snapshot
 author=Shawn Silverman <shawn@pobox.com>
 maintainer=Shawn Silverman <shawn@pobox.com>
 sentence=An lwIP-based Ethernet library for Teensy 4.1.
