--- a/Testprograms/EthernetTcpAsync/lib/QNEthernet/platformio.ini
+++ b/Testprograms/EthernetTcpAsync/lib/QNEthernet/platformio.ini
@@ -26,6 +26,13 @@ build_type = test
 build_flags = ${common.build_flags} -DLWIP_NETIF_LOOPBACK=1
 test_build_src = yes
 
+[env:teensy41-test-altcp]
+board = teensy41
+build_type = test
+build_flags = ${common.build_flags} -DLWIP_NETIF_LOOPBACK=1
+  -DLWIP_ALTCP=1 -DLWIP_ALTCP_TLS=1 -DQNETHERNET_ENABLE_ALTCP_DEFAULT_FUNCTIONS
+test_build_src = yes
+
 [env:teensy40]
 board = teensy40
 build_flags = ${common.build_flags} -DMAIN_TEST_PROGRAM
