Finalized example code (56 MBit/s Max Speed) and Display with 24 FPS running

--- a/Testprograms/EthernetTcpExtMem/platformio.ini
+++ b/Testprograms/EthernetTcpExtMem/platformio.ini
@@ -22,13 +22,12 @@ build_flags = ${env.build_unflags}
               -Wno-sign-compare
               -Wno-format-truncation
               -D AUDIO_BLOCK_SAMPLES=128
-              ; -D TEENSY_OPT_FAST
-              -Os
               -D USB_SERIAL
               -D LV_CONF_PATH=../../../src/Gui/lv_conf.h
               -D LV_LVGL_H_INCLUDE_SIMPLE
               -I src/Gui/generated
               -I src/Gui/custom
+              -I src
 
 lib_deps =
   QNEthernet
