--- a/Heron/platformio.ini
+++ b/Heron/platformio.ini
@@ -43,7 +43,7 @@ check_tool = clangtidy
 check_flags = clangtidy: --config-file=.clang-tidy
 
 build_flags = ${env.build_unflags}
-              -Wl,--print-memory-usage
+              -Wl,--print-memory-usage,--gc-sections
               -Wformat=1
               -Wno-sign-compare
               -Wno-format-truncation
@@ -52,12 +52,9 @@ build_flags = ${env.build_unflags}
               -D USB_MTPDISK_SERIAL
               -D LV_CONF_PATH=../../../src/Gui/lv_conf.h
               -D LV_LVGL_H_INCLUDE_SIMPLE
-              ; -D mem_clib_free=extmem_free
-              ; -D mem_clib_malloc=extmem_malloc
-              ; -D mem_clib_calloc=extmem_calloc
-              ; -D MEM_CUSTOM_ALLOCATOR=0       ; Use EXTMEM for Ethernet-Stack
               -I src/Gui/generated
               -I src/Gui/custom
+              -I src
 
 extra_scripts = pre:tools/prebuild.py
                 ; post:tools/postbuild.py
