Fixed nullptr error in QNEthernet Library

--- a/Heron/platformio.ini
+++ b/Heron/platformio.ini
@@ -55,6 +55,8 @@ build_flags = ${env.build_unflags}
               -I src/Gui/generated
               -I src/Gui/custom
               -I src
+              -Og   ; sets optimization level suitable for debugging.
+              -g    ; includes debug information in the build.
 
 extra_scripts = pre:tools/prebuild.py
                 ; post:tools/postbuild.py
