Removed SD FileSystem Stack -> trying to increase performance

--- a/Heron/platformio.ini
+++ b/Heron/platformio.ini
@@ -36,7 +36,7 @@ platform = teensy
 framework = arduino
 board = teensy41
 board_build.mcu = imxrt1062
-board_build.f_cpu = 912000000L   ;912000000L, 960000000L, 1008000000L
+board_build.f_cpu = 912000000L   ; 960000000L, 1008000000L
 monitor_raw = yes
 
 check_tool = clangtidy
@@ -49,14 +49,15 @@ build_flags = ${env.build_unflags}
               -Wno-format-truncation
               -D AUDIO_BLOCK_SAMPLES=128
               -D TEENSY_OPT_FASTER
-              -D USB_MTPDISK_SERIAL
+              -D USB_SERIAL
               -D LV_CONF_PATH=../../../src/Gui/lv_conf.h
               -D LV_LVGL_H_INCLUDE_SIMPLE
+              -I lib/OSFS/src         ; Needed in touch library as utils is included there
               -I src/Gui/generated
               -I src/Gui/custom
               -I src
-              -Og   ; sets optimization level suitable for debugging.
-              -g    ; includes debug information in the build.
+              -Og                     ; sets optimization level suitable for debugging.
+              -g                      ; includes debug information in the build.
 
 extra_scripts = pre:tools/prebuild.py
                 ; post:tools/postbuild.py
@@ -68,13 +69,11 @@ lib_deps =
   RTClib
   Adafruit Unified Sensor
   Adafruit LIS2MDL
-  MTP_Teensy
   AS5600
   Adafruit BMP3XX Library
   QNEthernet
   static_malloc
   OSFS
-  ; Preferences
   
 
 
