Added JSON handling in main app

--- a/Heron/platformio.ini
+++ b/Heron/platformio.ini
@@ -43,6 +43,7 @@ check_tool = clangtidy
 check_flags = clangtidy: --config-file=.clang-tidy
 
 build_flags = ${env.build_unflags}
+              '-DFIRMWARE_VERSION="0.1"'				; Enter Firmware Version here
               -Wl,--print-memory-usage,--gc-sections
               -Wformat=1
               -Wno-sign-compare
