--- a/Heron/platformio.ini
+++ b/Heron/platformio.ini
@@ -53,12 +53,14 @@ build_flags = ${env.build_unflags}
               -D USB_SERIAL
               -D LV_CONF_PATH=../../../src/Gui/lv_conf.h
               -D LV_LVGL_H_INCLUDE_SIMPLE
-              -I lib/OSFS/src         ; Needed in touch library as utils is included there
-              -I src/Gui/generated
-              -I src/Gui/custom
-              -I src
-              -Og                     ; sets optimization level suitable for debugging.
-              -g                      ; includes debug information in the build.
+              -I 'lib/OSFS/src'                 ; Needed in touch library as utils is included there
+              -I 'lib/RTClib/src'               ; Needed in touch library as utils is included there
+              -I 'lib/Adafruit BusIO'           ; Needed in touch library as utils is included there
+              -I 'src/Gui/generated'
+              -I 'src/Gui/custom'
+              -I 'src'
+              -Og                               ; sets optimization level suitable for debugging.
+              -g                                ; includes debug information in the build.
 
 extra_scripts = pre:tools/prebuild.py
                 ; post:tools/postbuild.py
