Added HMI System Status handling

--- a/Heron/platformio.ini
+++ b/Heron/platformio.ini
@@ -56,6 +56,7 @@ build_flags = ${env.build_unflags}
               -I 'lib/OSFS/src'                 ; Needed in touch library as utils is included there
               -I 'lib/RTClib/src'               ; Needed in touch library as utils is included there
               -I 'lib/Adafruit BusIO'           ; Needed in touch library as utils is included there
+              -I 'lib/WDT_T4'                   ; Needed in touch library as utils is included there
               -I 'src/Gui/generated'
               -I 'src/Gui/custom'
               -I 'src'
@@ -75,9 +76,6 @@ lib_deps =
   AS5600
   Adafruit BMP3XX Library
   QNEthernet
-  static_malloc
   EEPROM
   OSFS
-  
-
-
+  WDT_T4
