Changed Wire library to custom I2C Driver (not working condition -> very slow... don't know why yet)

--- a/Heron/platformio.ini
+++ b/Heron/platformio.ini
@@ -57,6 +57,9 @@ build_flags = ${env.build_unflags}
               -I 'lib/RTClib/src'               ; Needed in touch library as utils is included there
               -I 'lib/Adafruit BusIO'           ; Needed in touch library as utils is included there
               -I 'lib/WDT_T4'                   ; Needed in touch library as utils is included there
+              -I 'lib/teensy4_i2c/src'
+              -I 'lib/teensy4_i2c/src/imx_rt1060'
+              -I 'lib/TeensyThreads'
               -I 'src/Gui/generated'
               -I 'src/Gui/custom'
               -I 'src'
@@ -79,4 +82,3 @@ lib_deps =
   EEPROM
   OSFS
   WDT_T4
-  teensy4_i2c
